--- a/_includes/10.5-map-help-modal.html
+++ b/_includes/10.5-map-help-modal.html
@@ -1,19 +1,27 @@
 <!-- Modal -->
 <div id="mapHelpModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
-
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" id="hideModal2">&times;</button>
-        <h4 class="modal-title">Map Controls</h4>
+        <h2 class="text-center">Southern Ohio Trails Interactive Map</h2>
       </div>
       <div class="modal-body">
+        <p>
+          This map displays all the bikeways, hiking trails and parks archived at Southern Ohio Trails. To find more information about a trail, click on the trail or map key number. Points of interest can be added using the <i class="fa fa-star-o fa-lg"></i> Star icon, and a trail list can be found using the <i class="fa fa-th-list fa-lg"></i> List button. All points of interest have links to Google Maps directions from your current location.
+        </p>
+        <em>
+          This portal does not intend to be an exhautive list of all public trails in southern Ohio. Additionally, trail locations are for visualization purposes only. Please use the links provided for up to date location information for each trail.
+        </em>
+          <br /><br />
         <div class="list-group">
-          <span class="list-group-item" href="#"><i class="fa fa-star-o fa-fw" aria-hidden="true"></i>&nbsp; Show/Hide Point of Interest Locations</span>
-          <span class="list-group-item" href="#"><i class="fa fa-filter fa-fw" aria-hidden="true"></i>&nbsp; Show/Hide Trail Filter</span>
-          <span class="list-group-item" href="#"><i class="fa fa-location-arrow fa-fw" aria-hidden="true"></i>&nbsp; Zoom To/Follow GPS Location</span>
-          <span class="list-group-item" href="#"><i class="fa fa-question-circle fa-fw" aria-hidden="true"></i>&nbsp; Help</span>
+          <span class="list-group-item" style="text-align:center"><h4>Map Controls & POI Legend</h4></span>
+          <span class="list-group-item"><i class="fa fa-star-o fa-lg fa-fw" aria-hidden="true"></i>&nbsp; Toggle Points of Interest</span>
+          <span class="list-group-item"><i class="fa fa-th-list fa-lg fa-fw" aria-hidden="true"></i>&nbsp; Toggle Trail List</span>
+          <span class="list-group-item"><i class="fa fa-filter fa-lg fa-fw" aria-hidden="true"></i>&nbsp; Toggle Trail Filter</span>
+          <span class="list-group-item"><i class="fa fa-location-arrow fa-lg fa-fw" aria-hidden="true"></i>&nbsp; Zoom To/Follow GPS Location</span>
+          <span class="list-group-item"><i class="fa fa-question-circle fa-lg fa-fw" aria-hidden="true"></i>&nbsp; Help</span>
         </div>      </div>
       <div class="modal-footer">
         <button id="hideModal" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
