--- a/_includes/2-nav.html
+++ b/_includes/2-nav.html
@@ -18,7 +18,7 @@
                     <a class="page-scroll" href="/hiking">Hiking</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="">MTB</a>
+                    <a class="page-scroll" href="/mountain-biking">MTB</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="{% if page.permalink == "/map/" %}{%else%}/map{%endif%}">Map</a>
