--- a/assets/css/maps.css
+++ b/assets/css/maps.css
@@ -8,6 +8,38 @@ layout: compress
 {% include map-plugins/node_modules/leaflet-fullscreen/dist/leaflet.fullscreen.css%}
 
 /*custom map css*/
+.trailTooltip {
+  font-size: 16px;
+  font-weight: 800;
+  color: white;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+  border-width: 2px;
+  padding: 2px 4px;
+  width: 32px;
+  opacity: 1!important;
+  text-align: center;
+  border-radius: 2px;
+}
+.trailTooltip.hiking {
+  background-color: #936c39;
+}
+.trailTooltip.biking {
+  background-color: darkgreen;
+}
+.trailTooltip.buckeye {
+  background-color: steelblue;
+}
+.trailTooltip.leaflet-tooltip-left:before,
+.trailTooltip.leaflet-tooltip-right:before {
+    right: 0;
+    margin-right: -12px;
+    border-left-color: transparent;
+    border-right-color: transparent;
+}
 .leaflet-container {
   font-family: "Muli";
 }
