--- a/_includes/4-trails-overview.html
+++ b/_includes/4-trails-overview.html
@@ -5,7 +5,7 @@
         <div class="service-box">
           <a href="bikeways"><img src="/assets/img/homepage-images/medium/bikepath.jpg" class="img-responsive" alt="Responsive image"></a>
           <h3>Bikeways</h3>
-          <p class="text-muted">Southern Ohio has several paved and limestone bike paths.</p>
+          <p class="text-muted">Southern Ohio has several bike paths and shared-roadway bike routes. Click below to start exploring.</p>
           <a class="btn btn-outline btn-xl btn-inverse" href="bikeways/">View the Bikeways</a>
         </div>
       </div>
@@ -22,8 +22,8 @@
           <img src="/assets/img/homepage-images/medium/mountainbiking.jpg" class="img-responsive" alt="Responsive image">
           <!--i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i-->
           <h3>Mountain Bike Trails</h3>
-          <p class="text-muted">Mountain Biking is trending in Southern Ohio, and there are many great rides to choose from.</p>
-          <a class="btn btn-outline btn-xl btn-inverse" href="#">Coming Soon</a>
+          <p class="text-muted">Mountain Biking is trending in Southern Ohio, and there are many great rides to choose from. We have chosen to showcase the user-generated data from the MTB Project for this portal.</p>
+          <a class="btn btn-outline btn-xl btn-inverse" href="#">MTB Project Trails</a>
         </div>
       </div>
     </div>
