--- a/_includes/4.5-trails.sidebar.html
+++ b/_includes/4.5-trails.sidebar.html
@@ -13,7 +13,7 @@
           {% if trail.maptype == page.type and trail.Status == "Existing" %}
           {% if trail.subtype == "Extension" %}
           {% elsif trail.subtype == "Hiking Trail" %}
-          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}}</a></li>
+          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}} ({{trail.mapid}})</a></li>
           {% endif %}
           {%endif%}
           {%endfor%}
@@ -25,7 +25,7 @@
           {% if trail.maptype == 'hiking' and trail.Status == "Existing" %}
           {% if trail.subtype == "Extension" %}
           {% elsif trail.subtype == "Hiking Trail" %}
-          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}}</a></li>
+          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}} ({{trail.mapid}})</a></li>
           {% endif %}
           {%endif%}
           {%endfor%}
@@ -35,7 +35,7 @@
           {% if trail.maptype == 'mountain' and trail.Status == "Existing" %}
           {% if trail.subtype == "Extension" %}
           {% elsif trail.subtype == "Hiking Trail" %}
-          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}}</a></li>
+          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}} ({{trail.mapid}})</a></li>
           {% endif %}
           {%endif%}
           {%endfor%}
@@ -47,7 +47,7 @@
           {% if trail.maptype == 'bikeway' and trail.Status == "Existing" %}
           {% if trail.subtype == "Extension" %}
           {% elsif trail.subtype == "Hiking Trail" %}
-          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}}</a></li>
+          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}} ({{trail.mapid}})</a></li>
           {% endif %}
           {%endif%}
           {%endfor%}
@@ -57,7 +57,7 @@
           {% if trail.maptype == 'mountain' and trail.Status == "Existing" %}
           {% if trail.subtype == "Extension" %}
           {% elsif trail.subtype == "Hiking Trail" %}
-          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}}</a></li>
+          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}} ({{trail.mapid}})</a></li>
           {% endif %}
           {%endif%}
           {%endfor%}
@@ -69,7 +69,7 @@
           {% if trail.maptype == 'bikeway' and trail.Status == "Existing" %}
           {% if trail.subtype == "Extension" %}
           {% elsif trail.subtype == "Hiking Trail" %}
-          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}}</a></li>
+          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}} ({{trail.mapid}})</a></li>
           {% endif %}
           {%endif%}
           {%endfor%}
@@ -79,7 +79,7 @@
           {% if trail.maptype == 'hiking' and trail.Status == "Existing" %}
           {% if trail.subtype == "Extension" %}
           {% elsif trail.subtype == "Hiking Trail" %}
-          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}}</a></li>
+          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}} ({{trail.mapid}})</a></li>
           {% endif %}
           {%endif%}
           {%endfor%}
