--- a/_includes/8-scripts.html
+++ b/_includes/8-scripts.html
@@ -1,6 +1,6 @@
 <!-- Custom Fonts -->
 <noscript id="deferred-styles">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Muli|Catamaran" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,600,800|Catamaran:400,500" rel="stylesheet" />
 </noscript>
 <script>
   var loadDeferredStyles = function() {
