--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -49,6 +49,9 @@ $head-secondary: #1b7837 ;
 $theme-primary: #7fbf7b ;
 $theme-secondary: #1b7837 ;
 $theme-dark: #222;
+$font-primary: 'Catamaran';
+$font-secondary: 'Muli';
+$p-line-height: 2rem;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
@@ -56,6 +59,16 @@ $theme-dark: #222;
   "base"
 ;
 /*custom*/
+.trail-details td,
+.trail-details th {
+  width:50%;
+}
+.trail-details th {
+  text-align:center;
+}
+.table-condensed>tbody>tr>td, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>td, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>thead>tr>th {
+  padding: 2px;
+}
 #blank {
   position:absolute;
   top:0;
@@ -116,6 +129,7 @@ ul.active {
 .nav > li > a {
   padding: 13px 8px;
   font-size: 16px!important;
+  line-height: 23px;
 }
 .nav > li > a .fa-lg {
   line-height: 22px;
@@ -132,6 +146,10 @@ ul.active {
 .btn-xl {
   margin: 0 5px;
 }
+/*removed since got retinam magic working to scale and crop images*/
+/*.portfolio-box {
+  min-height:360px;
+}*/
 .portfolio-box .btn-sm-img:hover {
   color: #333;
   background-color: white!important;
@@ -253,47 +271,3 @@ footer {
     letter-spacing: 0px;
   }
 }
-/*nav list tweaks mobile*/
-/*.nav>li {
-    position: relative;
-    display: block;
-    text-align: center;
-    border-bottom: solid thin lightgray;
-}
-*/
-  /*
-  .navbar-header {
-      float: none;
-  }
-  {  .navbar-left,.navbar-right {
-        float: none !important;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin-top: 7.5px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .collapse.in{
-        display:block !important;
-    }
-}*/
