--- a/_includes/7-footer.html
+++ b/_includes/7-footer.html
@@ -9,9 +9,9 @@
     <a href="#page-top" class="page-scroll">Return to Top</a>
     <hr />
     <br />
-    <p>&copy; 2016 theme by <a rel="nofollow" target="blank" href="https://startbootstrap.com/template-overviews/new-age/">Start Bootstrap</a> Built with <a target="_blank" rel="nofollow" href="https://jekyllrb.com/">Jekyll</a> Orginal theme by
-      <a target="_blank" rel="nofollow"
-          href="https://it.linkedin.com/in/antoniotrento">Antonio Trento</a> hosted on <a target="_blank" rel="nofollow" href="https://surge.sh">Surge</a>. All Rights Reserved.
+    <p>&copy;2016 New Age theme by <a rel="nofollow" target="blank" href="https://startbootstrap.com/template-overviews/new-age/">Start Bootstrap</a> | <a target="_blank" rel="nofollow"
+          href="https://it.linkedin.com/in/antoniotrento">Antonio Trento</a> - All Rights Reserved.<br>
+          All theme customizations by <a href="https://getbounds.com" target="_blank">Malcolm Meyer</a> & <a href="http://www.ovrdc.org" target="_blank">OVRDC</a> are Public Domain. This site is built with <a target="_blank" rel="nofollow" href="https://jekyllrb.com/">Jekyll</a> and graciously hosted on <a target="_blank" rel="nofollow" href="https://www.netlify.com">Netlify</a>.
     </p>
     <br />
     <ul class="list-inline">
