--- a/_includes/4-trails-detailed.html
+++ b/_includes/4-trails-detailed.html
@@ -1,5 +1,5 @@
 <!-- trails detailed-->
-<div id="showlist" class="container visible-sm visible-xs" style="margin-top:60px;margin-bottom:-80px;">
+<div id="showlist" class="container visible-md visible-sm visible-xs" style="margin-top:60px;margin-bottom:-80px;">
   <button type="button" class="btn btn-outline btn-xs" data-toggle="offcanvas">Trail List</button>
 </div>
 <section id="content" class="animated">
@@ -14,7 +14,7 @@
       {% endif %}
     </h4>
     <div class="row row-offcanvas row-offcanvas-right">
-      <div class="col-lg-3 col-md-3">
+      <div class="col-lg-3 col-md-4 col-sm-4">
         <div class="service-box">
           <h3 class="section-heading">{{page.Name}}</h3>
           <p>{{page.Description}}</p>
@@ -30,7 +30,43 @@
             </div>
           </div>
           {%endif%}{% endfor%}
+          {% if page.slideshow %}
+          {% assign slideshow = {{page.slideshow}} | split: ", " %}
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+              {% for slide in slideshow %}
+              <li data-target="#myCarousel" data-slide-to="{{forloop.index}}"></li>
+              {% endfor %}
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+
+              <div class="item active">
+                <img src="/trails/images/medium/{{page.img}}" class="img-responsive img-thumbnail" alt="feature image">
+              </div>
+              {% for slide in slideshow %}
+              <div class="item">
+                <img src="/trails/images/medium/{{slide}}"  class="img-responsive img-thumbnail" alt="image">
+              </div>
+              {% endfor %}
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          {% else %}
           <img src="/trails/images/medium/{{page.img}}" class="img-responsive img-thumbnail" alt="{{page.Name}}" style="margin-bottom:20px;">
+          {% endif %}
           <div class="trail-details">
             <table class="table table-bordered text-center table-condensed trail-details" style="max-width:650px;">
               <tr>
@@ -51,6 +87,7 @@
             </table>
           </div>
           <hr /><br />
+          <a href="" class="btn btn-outline btn-sm-nav" style="width:100%;">Print Map</a>
           <p><h4>More Information & Resources</h4>
             {% if page.website %}<a href="{{page.website}}" class="btn btn-outline btn-sm-nav" target="_blank"><i class="fa fa-external-link">&nbsp;</i>Trail Website</a><span>&nbsp;</span>{%endif%}
             {% if page.ohio_org %}<a href="{{page.ohio_org}}" class="btn btn-outline btn-sm-nav" target="_blank"><i class="fa fa-external-link">&nbsp;</i>Ohio: Find it Here!</a><span>&nbsp;</span>{% endif %}
@@ -66,7 +103,10 @@
           </p>
         </div>
       </div>
-      <div class="col-lg-7 col-md-7">
+      <div class="col-lg-7 col-md-8 col-sm-8">
+        <div id="map-show-button" style="display:none;">
+          <button class="btn btn-success" style="width:100%;">Interactive Map</button>
+        </div>
         <div id="map">
             <div id="blank" style="position:absolute;top:0;left:0;bottom:0;width:100%;z-index:9999;background:white;"><img style="position:absolute;top:50%;left:50%;margin-top:-60px;margin-left:-60px;" src="/assets/img/ring-alt.gif" /></div>
           <div id="mapLeftSidebar"></div>
@@ -79,12 +119,9 @@
           </div>
           {% include 10.5-map-help-modal.html %}
         </div>
-        <div id="map-show-button" style="display:none;">
-          <button class="btn btn-primary">View Map</button>
-        </div>
       </div>
         {% assign sorted_trails = site.data.ovrdc_trails | sort:"Name" %}
-        <div id="sidebar" class="col-xs-6 col-sm-2 col-md-2 sidebar-offcanvas" style="border-left:solid thin lightgray;background:white;">
+        <div id="sidebar" class="col-lg-2 col-md-6 col-sm-6 col-xs-6 sidebar-offcanvas" style="border-left:solid thin lightgray;background:white;">
           <ul style="list-style:none;">
             {% if page.maptype == "bikeway" %}
               <h4 class="text-muted">Bikeways</h4>
