--- a/_includes/4-trails-overview.html
+++ b/_includes/4-trails-overview.html
@@ -19,11 +19,11 @@
       </div>
       <div class="col-lg-4 col-md-4 text-center">
         <div class="service-box">
-          <img src="/assets/img/homepage-images/medium/mountainbiking.jpg" class="img-responsive" alt="Responsive image">
+          <a href="/mountain-biking"><img src="/assets/img/homepage-images/medium/mountainbiking.jpg" class="img-responsive" alt="Responsive image"></a>
           <!--i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i-->
           <h3>Mountain Bike Trails</h3>
           <p class="text-muted">Mountain Biking is trending in Southern Ohio, and there are many great rides to choose from. We have chosen to showcase the user-generated data from the MTB Project for this portal.</p>
-          <a class="btn btn-outline btn-xl btn-inverse" href="#">MTB Project Trails</a>
+          <a class="btn btn-outline btn-xl btn-inverse" href="/mountain-biking">MTB Project Trails</a>
         </div>
       </div>
     </div>
